--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -1,1 +1,4 @@
-This is the default content of /views/scripts/index/index.phtml
+This is the default content of /views/scripts/auth/login.phtml
+<?php
+	echo $this->loginForm;
+?>
