--- a/application/views/scripts/uploadlist/uploadlist.phtml
+++ b/application/views/scripts/uploadlist/uploadlist.phtml
@@ -1,26 +1,18 @@
-<?php
-
-/*
- * To change this template, choose Tools | Templates
- * and open the template in the editor.
- */
-?>
 <h1>Liste der hochgeladenen Dateien</h1>
 <li>
-<?php foreach($this->listFiles as $file) { 
-    if ($file != "." && $file != "..") {
-    ?>
-    
-        <form method="POST" action="/uploadlist/uploadlist">
-            <?php $this->file=$file?>
-            <ul>
-                <?= $file?> &nbsp;
-                <input type="hidden" value="<?= $file?>" name="file"/>
-                [&nbsp; Target: <input type="checkbox" value="id"/>]
-                <input type="submit" value="delete" />                
-            </ul>
-        </form>
-    
-<?php }} ?>
-    <a href="/upload/upload">hochladen</a>
+  <?php foreach($this->listFiles as $file): ?> 
+    <?php if($file != "." && $file != ".."): ?>
+      <form method="POST" action="/uploadlist/uploadlist">
+        <?php $this->file = $file ?>
+        <ul>
+          <?php echo $file ?> &nbsp;
+          <input type="hidden" value="<?php echo $file ?>" name="file"/>
+          [&nbsp; Target: <input type="checkbox" value="id"/>]
+          <input type="submit" value="delete" />                
+        </ul>
+      </form>
+
+    <?php endif; ?>
+  <?php endforeach; ?>
+  <a href="/upload/upload">hochladen</a>
 </li>
