--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,44 +1,57 @@
-<!DOCTYPE html> 
-<html> 
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-<?php echo $this->headMeta(); ?>
-<?php
-$currentController = Zend_Controller_Front::getInstance()->getRequest()->getControllerName();
-$currentAction = Zend_Controller_Front::getInstance()->getRequest()->getActionName();
-?>
+  <?php echo $this->headMeta(); ?>
+  <?php
+  $currentController = Zend_Controller_Front::getInstance()->getRequest()->getControllerName();
+  $currentAction = Zend_Controller_Front::getInstance()->getRequest()->getActionName();
+  ?>
 </head>
 <body>
-    <div style="width: 800px">
-<?php 
-$defaultNamespace = new Zend_Session_Namespace('Default');
+  <div style="width: 800px">
+  <?php 
+  $defaultNamespace = new Zend_Session_Namespace('Default');
 
-// different navigation if user is logged in or not
-if(Zend_Auth::getInstance()->hasIdentity()) {
-    echo $this->translate("You are logged in.");
-    ?>
-    <a href="/user/edit/id/<?php echo $defaultNamespace->user->getId(); ?>"><?php echo $this->translate("Edit profile"); ?></a>
-    or <a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a>
-    <?php
-} else {
-    echo $this->translate("You are not logged in."); 
-    ?>
-    <a href="/user/register"><?php echo $this->translate("Register now"); ?></a> 
-    or <a href="/auth/login"><?php echo $this->translate("Login"); ?></a>
-    <?php
-}
-?>
-<?php 
-if(!empty($this->flashMessages)) {
-    echo '<div class="flash-messages">';
+  // different navigation if user is logged in or not
+  if(Zend_Auth::getInstance()->hasIdentity()) {
+      echo $this->translate("You are logged in.");
+      ?>
+      <a href="/user/edit/id/<?php echo $defaultNamespace->user->getId(); ?>"><?php echo $this->translate("Edit profile"); ?></a>
+      or <a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a>
+      <?php
+  } else {
+      echo $this->translate("You are not logged in."); 
+      ?>
+      <a href="/user/register"><?php echo $this->translate("Register now"); ?></a> 
+      or <a href="/auth/login"><?php echo $this->translate("Login"); ?></a>
+      <?php
+  }
+  ?>
+  <?php 
+  if(!empty($this->flashMessages)) {
+      echo '<div class="flash-messages">';
 
-    foreach($this->flashMessages as $key => $value) {
-        echo $this->translate($value)."<br />";
-    }
-    echo '</div>';
-}
+      foreach($this->flashMessages as $key => $value) {
+          echo $this->translate($value)."<br />";
+      }
+      echo '</div>';
+  }
 
-// content from each view, the rest of this page is global to all views
-echo "<br /><br />" . $this->layout()->content;
-?></div>
+  // content from each view, the rest of this page is global to all views
+  echo "<br /><br />" . $this->layout()->content;
+  ?>
+  </div>
+  
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+  <script defer src="js/plugins.js"></script>
+  <script defer src="js/script.js"></script>
+  <!--[if lt IE 7 ]>
+  <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+  <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+  <![endif]-->
 </body>
 </html>
