--- a/application/views/scripts/user/register.phtml
+++ b/application/views/scripts/user/register.phtml
@@ -1,5 +1,5 @@
 <?php
-    $this->title = $this->translate("Register");
+    $this->title = $this->translate("Registration");
     $this->headTitle($this->title);
 ?>
 
