--- a/application/views/scripts/file/upload.phtml
+++ b/application/views/scripts/file/upload.phtml
@@ -1,8 +1,7 @@
 <?php
-
-/*
- * To change this template, choose Tools | Templates
- * and open the template in the editor.
- */
+    $this->title = $this->translate("Upload a file");
+    $this->headTitle($this->title);
+?>
+<?php
    echo $this->form;
 ?>
