Adds case list and errors when creating a new case.

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -47,7 +47,7 @@
             <a href="/index/index"><span class="left">&nbsp;</span><span class="home">&nbsp;</span><span class="right">&nbsp;</span></a>
           </li>
           <li class="button">
-            <a href="/case/create"><span class="left">&nbsp;</span>Cases<span class="right">&nbsp;</span></a>
+            <a href="/case/list"><span class="left">&nbsp;</span>Cases<span class="right">&nbsp;</span></a>
           </li>
           <li class="button">
             <a href="/file/list"><span class="left">&nbsp;</span>Files<span class="right"nbsp;</span></a>
