--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -1,6 +1,6 @@
 body { 
   background-color: #f5f5f5;
-  background-image: url('/images/bg_strip.png');
+  background-image: url('/resources/images/bg_strip.png');
   background-repeat: repeat-x;
   padding: 0;
   margin: 0;
@@ -43,7 +43,7 @@ body {
 }
 
 #header #top-menu {
-  background-image: url('/images/header.png');
+  background-image: url('/resources/images/header.png');
   height: 142px
 }
 
@@ -60,7 +60,7 @@ body {
 }
 
 #header #top-menu li a {
-  background-image: url('/images/topmenu-btn_center.png');
+  background-image: url('/resources/images/topmenu-btn_center.png');
   padding: 11px 0 9px 0;
   color: white;
   text-decoration: none;
@@ -68,42 +68,42 @@ body {
 }
 
 #header #top-menu li a .left {
-    background-image: url('/images/topmenu-btn_left.png');
+    background-image: url('/resources/images/topmenu-btn_left.png');
     background-repeat: no-repeat;
     padding: 11px 10px 9px 0;
 }
 
 #header #top-menu li a .right {
-    background-image: url('/images/topmenu-btn_right.png');
+    background-image: url('/resources/images/topmenu-btn_right.png');
     background-repeat: no-repeat;
     background-position: right;
     padding: 11px 0 9px 10px;
 }
 
 #header #top-menu li a:hover {
-  background-image: url('/images/topmenu-btn_center_hover.png');
+  background-image: url('/resources/images/topmenu-btn_center_hover.png');
   color: #666666;
 }
 
 #header #top-menu li a:hover .left {
-  background-image: url('/images/topmenu-btn_left_hover.png');
+  background-image: url('/resources/images/topmenu-btn_left_hover.png');
 }
 
 #header #top-menu li a:hover .right {
-  background-image: url('/images/topmenu-btn_right_hover.png');
+  background-image: url('/resources/images/topmenu-btn_right_hover.png');
 }
 
 #header #top-menu li a .home {
-  background-image: url('/images/home_icon.png');
+  background-image: url('/resources/images/home_icon.png');
   padding: 3px 6px 1px 6px;
 }
 
 #header #top-menu li a:hover .home {
-  background-image: url('/images/home_icon_hover.png');
+  background-image: url('/resources/images/home_icon_hover.png');
 }
 
 #content {
-  background-image: url('/images/content_strip.png');
+  background-image: url('/resources/images/content_strip.png');
   background-repeat: repeat-y;
   min-height: 500px;
 }
@@ -254,7 +254,7 @@ a:hover {
   
 .zend_form input[type='submit'],
 .zend_form input[type='submit']:visited {
-	background: #313438 url('/images/alert-overlay.png') repeat-x; 
+	background: #313438 url('/resources/images/alert-overlay.png') repeat-x; 
 	display: inline-block; 
 	padding: 5px 10px 6px;
   margin-left: 15px;
