--- a/application/views/scripts/case/list.phtml
+++ b/application/views/scripts/case/list.phtml
@@ -4,9 +4,9 @@
 ?>
 <table cellpadding="0" cellspacing="0" class="default"> 
   <tr>
-    <th>Name</th>
-    <th style="width: 80px;">Alias</th>
-    <th style="width: 200px;">Actions</th>
+    <th><?php echo $this->translate("Name"); ?></th>
+    <th style="width: 110px;"><?php echo $this->translate("Alias"); ?></th>
+    <th style="width: 200px;"><?php echo $this->translate("Actions"); ?></th>
   </tr>
   <?php 
   $i = 0;
