--- a/application/views/scripts/file/list.phtml
+++ b/application/views/scripts/file/list.phtml
@@ -4,9 +4,9 @@
 ?>
 <table cellpadding="0" cellspacing="0" class="default"> 
   <tr>
-    <th>Filename</th>
-    <th style="width: 80px;">Size</th>
-    <th style="width: 200px;">Actions</th>
+    <th><?php echo $this->translate("Filename"); ?></th>
+    <th style="width: 110px;"><?php echo $this->translate("Size"); ?></th>
+    <th style="width: 200px;"><?php echo $this->translate("Actions"); ?></th>
   </tr>
   <?php 
   $i = 0;
@@ -15,11 +15,11 @@
   <tr <?php echo ($i++ %2 == 0) ? "class=\"even\"" : ""; ?>>
     <td><?php echo $file->getFilename(); ?></td>
     <td><?php echo $file->getSize(); ?></td>
-    <td>[ <a href="<?php echo "/file/download/id/" . $file->getId(); ?>">download</a> | 
+    <td>[ <a href="<?php echo "/file/download/id/" . $file->getId(); ?>"><?php echo $this->translate("download"); ?></a> | 
           <?php if($file->getIsTarget()) { ?>
-            <a href="<?php echo "/file/unset-target/id/" . $file->getId(); ?>">unset target</a>
+            <a href="<?php echo "/file/unset-target/id/" . $file->getId(); ?>"><?php echo $this->translate("unset target"); ?></a>
           <?php } else { ?>
-            <a href="<?php echo "/file/set-target/id/" . $file->getId(); ?>">set target</a>
+            <a href="<?php echo "/file/set-target/id/" . $file->getId(); ?>"><?php echo $this->translate("set target"); ?></a>
           <?php } ?> 
             ]</td>
   </tr>
