--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -66,12 +66,22 @@ td { vertical-align: top; }
 
 body { 
   background-color: #f5f5f5;
-  background-image: url('/resources/images/bg_strip.png');
-  background-repeat: repeat-x;
-  padding: 0;
-  margin: 0;
   font-family: Helvetica, Arial, Sans-serif;
   color: #323232;
+}
+
+#main-header{
+  color: white;
+  line-height: 45px; 
+  background: #333333;
+  background: -moz-linear-gradient(top, #4c4f54 0%, #000000 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4c4f54), color-stop(100%,#000000));
+  background: -webkit-linear-gradient(top, #4c4f54 0%,#000000 100%);
+  background: -o-linear-gradient(top, #4c4f54 0%,#000000 100%);
+  background: -ms-linear-gradient(top, #4c4f54 0%,#000000 100%);
+  background: linear-gradient(top, #4c4f54 0%,#000000 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4f54', endColorstr='#000000',GradientType=0 );
+  margin-bottom: 35px; 
 }
 
 #page {
@@ -79,12 +89,9 @@ body {
   margin: 0 auto;
 }
 
-#header #settings-panel {
-  height: 75px;
-  margin-left: 22px;
-}
+#settings-panel{ margin: auto; width: 1062px; padding-left: 22px; }
 
-#header #settings-panel a {
+#settings-panel a {
   color: #8b8f91;
 }
 
