--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -1,6 +1,6 @@
 /* HTML5 ✰ Boilerplate
  * ==|== normalize ==========================================================
- */
+*/
 article, aside, details, figcaption, figure, footer, header, hgroup, nav, section { display: block; }
 audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 audio:not([controls]) { display: none; }
@@ -89,7 +89,11 @@ body {
   margin: 0 auto;
 }
 
-#settings-panel{ margin: auto; width: 1062px; padding-left: 22px; }
+#settings-panel{ 
+  margin: auto; 
+  width: 1062px; 
+  padding-left: 22px; 
+}
 
 #settings-panel a {
   color: #8b8f91;
@@ -141,16 +145,16 @@ body {
 }
 
 #header #top-menu li a .left {
-    background-image: url('/resources/images/topmenu-btn_left.png');
-    background-repeat: no-repeat;
-    padding: 11px 10px 9px 0;
+  background-image: url('/resources/images/topmenu-btn_left.png');
+  background-repeat: no-repeat;
+  padding: 11px 10px 9px 0;
 }
 
 #header #top-menu li a .right {
-    background-image: url('/resources/images/topmenu-btn_right.png');
-    background-repeat: no-repeat;
-    background-position: right;
-    padding: 11px 0 9px 10px;
+  background-image: url('/resources/images/topmenu-btn_right.png');
+  background-repeat: no-repeat;
+  background-position: right;
+  padding: 11px 0 9px 10px;
 }
 
 #header #top-menu li a:hover,
@@ -251,12 +255,12 @@ a:hover {
 /* zend form */
 .zend_form,
 .zend_form  dd {
-	padding: 0;
-	margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .zend_form  dl {
-	margin: 15px 0 0 15px;
+  margin: 15px 0 0 15px;
 }
 
 .zend_form label {
@@ -268,85 +272,85 @@ a:hover {
 .zend_form select,
 .zend_form textarea
 {
-	font-family: Arial, sans-serif;
-	background: #ffffff;
-	width: 350px;
-	padding: 3px 5px 3px;
-	text-decoration: none;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	border: 1px solid #c0c0c0;
-	position: relative;
-	font-size: 11pt;
-	margin-bottom: 5px;
+  font-family: Arial, sans-serif;
+  background: #ffffff;
+  width: 350px;
+  padding: 3px 5px 3px;
+  text-decoration: none;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border: 1px solid #c0c0c0;
+  position: relative;
+  font-size: 11pt;
+  margin-bottom: 5px;
 }
 .zend_form input[type='file']
-	{
-	border: 0;
-	}
+{
+  border: 0;
+}
 
 .zend_form textarea
-	{
-	width: 500px;
-	max-width: 500px;
-	height: 250px;
-	max-height: 250px;
-	margin-bottom: 15px;
-	}
-	
+{
+  width: 500px;
+  max-width: 500px;
+  height: 250px;
+  max-height: 250px;
+  margin-bottom: 15px;
+}
+
 .zend_form textarea.auto
-	{
-	max-width: auto;
-	max-height: auto;
-	}
+{
+  max-width: auto;
+  max-height: auto;
+}
 
 .zend_form ul.errors {
-	color: red;
-	background-color: #ffedf1;
-	margin: 0 0 5px 0;
-	padding: 3px;
-	}
+  color: red;
+  background-color: #ffedf1;
+  margin: 0 0 5px 0;
+  padding: 3px;
+}
 
 .zend_form ul.errors li {
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-	}
-	
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
 .zend_form fieldset {
-	border: 0;
+  border: 0;
   background-color: #ebeced;
   -webkit-border-radius: 5px;
   margin: 5px 0 5px 0;
-	}
-	
+}
+
 .zend_form fieldset legend {
-	margin: 0;
-	padding: 0;
-	font-weight: normal;
-	font-size: 13pt;
-	}
-  
-  
-  
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+  font-size: 13pt;
+}
+
+
+
 .zend_form input[type='submit'],
 .zend_form input[type='submit']:visited {
-	background: #313438 url('/resources/images/alert-overlay.png') repeat-x; 
-	display: inline-block; 
-	padding: 5px 10px 6px;
+  background: #313438 url('/resources/images/alert-overlay.png') repeat-x; 
+  display: inline-block; 
+  padding: 5px 10px 6px;
   margin-left: 15px;
-	color: #fff; 
-	text-decoration: none;
-	-moz-border-radius: 5px; 
-	-webkit-border-radius: 5px;
-	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
-	text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
-	position: relative;
-	cursor: pointer;
+  color: #fff; 
+  text-decoration: none;
+  -moz-border-radius: 5px; 
+  -webkit-border-radius: 5px;
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+  text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+  position: relative;
+  cursor: pointer;
   font-size: 10pt;
   margin-top: 5px;
-  
+
 }
 
 .zend_form input[type='submit']:hover	{ 
@@ -387,7 +391,7 @@ a:hover {
 
 
 /* ==|== print styles ======================================================= */
- 
+
 @media print {
   * { background: transparent !important; color: black !important; text-shadow: none !important; filter:none !important; -ms-filter: none !important; } 
   a, a:visited { text-decoration: underline; }
