--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -94,7 +94,7 @@ $defaultNamespace = new Zend_Session_Namespace('Default');
 
       </div>
     <footer>
-footer    </footer>
+footer1    </footer>
     </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="/resources/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
