--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -82,7 +82,43 @@ body {
   background: linear-gradient(top, #4c4f54 0%,#000000 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4f54', endColorstr='#000000',GradientType=0 );
   margin-bottom: 35px; 
+  position: relative;
 }
+
+.js #main-header .dropdown-button {
+  position: absolute;
+  float: right;
+  bottom: -10px;
+  right: 20px;
+  cursor: pointer;
+}
+
+.js #main-header .dropdown-button.arrow-up {
+  position: absolute;
+  float: right;
+  bottom: 0px;
+  right: 20px;
+}
+
+.arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+
+  border-bottom: 10px solid #f5f5f5;
+}
+
+.arrow-down{
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid black;
+}
+
+
+
 
 #page {
   width: 1062px;
