--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -72,7 +72,6 @@ body {
 
 #main-header{
   color: white;
-  line-height: 45px; 
   background: #333333;
   background: -moz-linear-gradient(top, #4c4f54 0%, #000000 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#4c4f54), color-stop(100%,#000000));
@@ -81,8 +80,9 @@ body {
   background: -ms-linear-gradient(top, #4c4f54 0%,#000000 100%);
   background: linear-gradient(top, #4c4f54 0%,#000000 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4f54', endColorstr='#000000',GradientType=0 );
-  margin-bottom: 35px; 
+  padding: 12px 20px;
   position: relative;
+  margin-bottom: 35px;
 }
 
 .js #main-header .dropdown-button {
