--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -80,7 +80,7 @@ body {
   background: -ms-linear-gradient(top, #4c4f54 0%,#000000 100%);
   background: linear-gradient(top, #4c4f54 0%,#000000 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4f54', endColorstr='#000000',GradientType=0 );
-  padding: 12px 20px;
+  padding: 12px 0;
   position: relative;
   margin-bottom: 115px;
 }
