--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -59,7 +59,12 @@ $defaultNamespace = new Zend_Session_Namespace('Default');
             <li class="button<?php if($currentController == "file"){
             echo " active";
           } ?>">
-              <a href="/file/list"><span class="left">&nbsp;</span><?php echo $this->translate("Files"); ?><span class="right"nbsp;</span></a>
+              <a href="/file/list"><span class="left">&nbsp;</span><?php echo $this->translate("Files"); ?><span class="right">&nbsp;</span></a>
+            </li>
+             <li class="button<?php if($currentController == "document"){
+            echo " active";
+          } ?>">
+              <a href="/document/list"><span class="left">&nbsp;</span><?php echo $this->translate("Documents"); ?><span class="right">&nbsp;</span></a>
             </li>
             <?php if(Zend_Auth::getInstance()->hasIdentity()){ ?>
               <li class="button<?php if($currentController == "user" && $currentAction == "edit"){
