--- a/application/views/scripts/file/list.phtml
+++ b/application/views/scripts/file/list.phtml
@@ -20,7 +20,9 @@
             <a href="<?php echo "/file/unset-target/id/" . $file->getId(); ?>"><?php echo $this->translate("unset target"); ?></a>
           <?php } else { ?>
             <a href="<?php echo "/file/set-target/id/" . $file->getId(); ?>"><?php echo $this->translate("set target"); ?></a>
-          <?php } ?> 
+          <?php } ?>  |
+                      <a href="<?php echo "/file/parse/id/" . $file->getId(); ?>"><?php echo $this->translate("parse"); ?></a>
+
             ]</td>
   </tr>
   <?php endforeach; ?>
