--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -16,7 +16,8 @@ $defaultNamespace = new Zend_Session_Namespace('Default');
         ->prependStylesheet($this->baseUrl() . '/resources/css/styles.css');
     //	->appendStylesheet($this->baseUrl().'/css/navi_de.css')
     ?>
-    <script src="/resources/js/libs/modernizr-2.0.6.min.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <script src="<?php echo $this->baseUrl('/resources/js/libs/modernizr-2.0.6.min.js'); ?>"></script>
   </head>
   <body>
     <header id="main-header">
@@ -98,9 +99,9 @@ $defaultNamespace = new Zend_Session_Namespace('Default');
 footer123    </footer>
     </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/resources/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
-  <script defer src="/resources/js/plugins.js"></script>
-  <script defer src="/resources/js/script.js"></script>
+  <script>window.jQuery || document.write('<script src="<?php echo $this->baseUrl('/resources/js/libs/jquery-1.6.2.min.js'); ?>"><\/script>')</script>
+  <script defer src="<?php echo $this->baseUrl('/resources/js/plugins.js'); ?>"></script>
+  <script defer src="<?php echo $this->baseUrl('/resources/js/script.js'); ?>"></script>
   <!--[if lt IE 7]>
   <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
   <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
