Edit OCR-Scanned pages, adds famfamfam icon set, fixes response layout bugs

--- a/application/views/scripts/document/page/show.phtml
+++ b/application/views/scripts/document/page/show.phtml
@@ -6,5 +6,6 @@ $this->headTitle($this->title);
 Page number: <?php echo $this->page->getPageNumber(); ?><br />
 
 Content: <br />
-<?php echo $this->page->getContent();
-?>
+<div class="document-page">
+<?php echo nl2br($this->page->getContent()); ?>
+</div>
