--- a/application/views/scripts/document/page/list.phtml
+++ b/application/views/scripts/document/page/list.phtml
@@ -4,9 +4,8 @@
 ?>
 <table cellpadding="0" cellspacing="0" class="default"> 
   <tr>
-    <th><?php echo $this->translate("Title"); ?></th>
-    <th style="width: 110px;"><?php echo $this->translate("Size"); ?></th>
-    <th style="width: 200px;"><?php echo $this->translate("Actions"); ?></th>
+    <th><?php echo $this->translate("Page number"); ?></th>
+    <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
   </tr>
   <?php 
   $i = 0;
@@ -14,8 +13,7 @@
     ?>
   <tr <?php echo ($i++ %2 == 0) ? "class=\"even\"" : ""; ?>>
     <td><a href="/document_page/show/id/<?php echo $page->getId(); ?>"><?php echo $page->getPageNumber(); ?></a></td>
-    <td><?php //echo $document->getSize(); ?></td>
-    <td>[ ]</td>
+    <td><a href="<?php echo "/document_page/edit/id/" . $page->getId(); ?>"><img class="icon" src="/resources/icons/page_edit.png" title="<?php echo $this->translate("edit"); ?>" /></a></td>
   </tr>
   <?php endforeach; ?>
 </table>
