--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -246,7 +246,7 @@ h2 {
   margin: 0;
   font-weight: 100;
   font-size: 20pt;
-  padding: 0 0 0 0;
+  padding: 0 0 0 11px;
 }
 
 p {
@@ -255,7 +255,7 @@ p {
 
 #content #main {
   width: auto;
-  padding-left: 25px;
+  padding-left: 11px;
   margin-right: 350px;
 }
 
@@ -379,7 +379,7 @@ a:hover {
 
 .zend_form fieldset legend {
   margin: 0;
-  padding: 0;
+  padding: 0 15px 5px 15px;
   font-weight: normal;
   font-size: 13pt;
 }
