--- a/application/views/scripts/document/list.phtml
+++ b/application/views/scripts/document/list.phtml
@@ -5,7 +5,6 @@
 <table cellpadding="0" cellspacing="0" class="default"> 
   <tr>
     <th><?php echo $this->translate("Title"); ?></th>
-    <th style="width: 110px;"><?php echo $this->translate("Size"); ?></th>
     <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
   </tr>
   <?php 
@@ -14,8 +13,7 @@
     ?>
   <tr <?php echo ($i++ %2 == 0) ? "class=\"even\"" : ""; ?>>
     <td><a href="/document_page/list/id/<?php echo $document->getId(); ?>"><?php echo $document->getTitle(); ?></a></td>
-    <td><?php //echo $document->getSize(); ?></td>
-    <td>[ ]</td>
+    <td><a href="<?php echo "/document/delete/id/" . $document->getId(); ?>"><img class="icon" src="/resources/icons/delete.png" title="<?php echo $this->translate("delete"); ?>" /></a></td>
   </tr>
   <?php endforeach; ?>
 </table>
