--- a/application/views/scripts/document/page/show.phtml
+++ b/application/views/scripts/document/page/show.phtml
@@ -2,7 +2,7 @@
 $this->title = $this->translate("Page details");
 $this->headTitle($this->title);
 ?>
-<h2><?php echo $this->page->getDocument()->getTitle(); ?></h2>
+Document: <?php echo $this->page->getDocument()->getTitle(); ?><br />
 Page number: <?php echo $this->page->getPageNumber(); ?><br />
 
 Content: <br />
