basic de-hyphen gui, changing linebreaks for parsed documents to <br />s

--- a/application/views/scripts/document/page/show.phtml
+++ b/application/views/scripts/document/page/show.phtml
@@ -7,5 +7,5 @@ Page number: <?php echo $this->page->getPageNumber(); ?><br />
 
 Content: <br />
 <div class="document-page">
-<?php echo nl2br($this->page->getContent()); ?>
+<?php echo $this->page->getContent(); ?>
 </div>
